# bookstore2

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
bookstore/: settings.py  views.py
